--- a/.github/workflows/workflows/CD.yml
+++ b/.github/workflows/workflows/CD.yml
@@ -2,9 +2,9 @@ name: CD
 
 on:
   push:
-    branches: [main]
+    branches: main
   pull_request:
-    branches: [main]
+    branches: main
 
 env:
   NUGETTOKEN: ${{ secrets.NUGET_TOKEN }}
