--- a/csharp/Platform.Data.Sequences/Platform.Data.Sequences.csproj
+++ b/csharp/Platform.Data.Sequences/Platform.Data.Sequences.csproj
@@ -4,7 +4,7 @@
     <Description>LinksPlatform's Platform.Data.Sequences Class Library</Description>
     <Copyright>konard, FreePhoenix888</Copyright>
     <AssemblyTitle>Platform.Data.Sequences</AssemblyTitle>
-    <VersionPrefix>0.1.0</VersionPrefix>
+    <VersionPrefix>0.2.0</VersionPrefix>
     <Authors>konard, FreePhoenix888</Authors>
     <TargetFrameworks>net472;netstandard2.0;netstandard2.1;net5</TargetFrameworks>
     <AssemblyName>Platform.Data.Sequences</AssemblyName>
@@ -24,7 +24,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
-    <PackageReleaseNotes>All IList<![CDATA[<]]>TLinkAddress<![CDATA[>]]> parameters are made nullable. TLinkAddress type parameter are made constained as struct. Update Microsoft.SourceLink.GitHub dependency from 1.0.0 to 1.1.1.</PackageReleaseNotes>
+    <PackageReleaseNotes>TLinkAddress typed parameter is not constrained anymore.</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
