--- a/.github/workflows/csharp.yml
+++ b/.github/workflows/csharp.yml
@@ -25,6 +25,7 @@ jobs:
           submodules: true
       - name: Test
         run: |
+          cd csharp
           dotnet test -c Release -f net8
 
   pushNuGetPackageToGitHubPackageRegistry:
