--- a/.github/workflows/csharp.yml
+++ b/.github/workflows/csharp.yml
@@ -61,8 +61,7 @@ jobs:
             --name "GitHub" \
             --username "linksplatform" \
             --password "${{ secrets.GITHUB_TOKEN }}" \
-            --store-password-in-clear-text \
-            --skip-duplicate
+            --store-password-in-clear-text
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
@@ -71,7 +70,8 @@ jobs:
         run: |
           dotnet nuget push ./nupkgs/*.nupkg \
             --source "GitHub" \
-            --api-key "${{ secrets.GITHUB_TOKEN }}"
+            --api-key "${{ secrets.GITHUB_TOKEN }}" \
+            --skip-duplicate
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
